Some html was changed and teacher and student

--- a/src/main/resources/templates/error/error.html
+++ b/src/main/resources/templates/error/error.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" >
 <head   data-th-replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
     <title>Thymeleaf Springboot </title>
@@ -10,7 +10,7 @@
 <div class="col-12 col-sm-12 col-md-12 mt-4">
     <div class="container-fluid" th:with="httpStatus=${T(org.springframework.http.HttpStatus).valueOf(#response.status)}">
         <div class="container text-center">
-            <h1 class="invalid-feedback" th:text="|${httpStatus} - ${httpStatus.reasonPhrase}|">404</h1>
+            <h1 class="invalid-feedback" data-th-text="|${httpStatus} - ${httpStatus.reasonPhrase}|">404</h1>
             <h1 class="invalid-feedback"   data-th-if="${accessDenied!=null}"   data-th-text="${accessDenied}">404</h1>
         </div>
         <div class="col-12 col-sm-12 col-md-12 mt-4 mb-4 p-4">
@@ -36,7 +36,7 @@
 </div>
 </main>
 <!--footer include-->
-<footer   data-th-replace="~{fragments/footer :: footerFragment}"></footer>
+<div   data-th-replace="~{fragments/footer :: footerFragment}"></div>
 <!--script include-->
 <div data-th-replace="~{fragments/script :: scriptFragment}"></div>
 
