--- a/src/main/resources/templates/fragments/script.html
+++ b/src/main/resources/templates/fragments/script.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" >
 <body>
-<div th:fragment="scriptFragment">
+<div data-th-fragment="scriptFragment">
 
     <!-- jQuery library -->
     <script data-th-src="@{/webjars/jquery/3.4.1/jquery.js}"></script>
