--- a/src/main/resources/templates/fragments/sideBar.html
+++ b/src/main/resources/templates/fragments/sideBar.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" >
 <head>
 
 </head>
 <body id="page-top">
 
 <!-- Page Wrapper -->
-<div id="wrapper" th:fragment="sideBarFragment">
+<div id="wrapper" data-th-fragment="sideBarFragment">
 
     <!-- Sidebar -->
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
