--- a/src/main/resources/templates/login/passwordChange.html
+++ b/src/main/resources/templates/login/passwordChange.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" >
 <head   data-th-replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
     <title>Thymeleaf Springboot </title>
@@ -14,7 +14,7 @@
             <h4><b><span   data-th-text="${#authentication.name}"></span></b></h4>
         </div>
         <div class="col-6 offset-2">
-            <form class="form-horizontal" id="form" th:action="${'/passwordChange'}" th:object="${pswChange}" th:method="POST">
+            <form class="form-horizontal" id="form" data-th-action="${'/passwordChange'}" data-th-object="${pswChange}" th:method="POST">
                 <div class="form-group col-md-12 col-sm-12 text-left flex-column">
                     <!--Old password-->
                     <div class="form-row text-right">
@@ -22,7 +22,7 @@
                             <label class="control-label " for="opsw">Old Password</label>
                         </div>
                         <div class="col-md-6 input-group">
-                            <input type="password" th:field="*{oldPassword}" id="opsw" placeholder="Enter Old Password Here"
+                            <input type="password" data-th-field="*{oldPassword}" id="opsw" placeholder="Enter Old Password Here"
                                    class="form-control pwd" name="opsw" required/>
                             <span class="error" id="opswError" th:errors="*{oldPassword}"   data-th-if="${#fields.hasErrors('oldPassword')}">Current Password is error</span>
 
@@ -34,7 +34,7 @@
                             <label class="control-label " for="npsw">New Password</label>
                         </div>
                         <div class="col-md-6">
-                            <input type="password" th:field="*{newPassword}" id="npsw" placeholder="Enter New Password Here"
+                            <input type="password" data-th-field="*{newPassword}" id="npsw" placeholder="Enter New Password Here"
                                    class="form-control pwd" name="npsw" required/>
                             <span class="error" th:errors="*{newPassword}"   data-th-if="${#fields.hasErrors('newPassword')}" id="npswError">Error New Password</span>
                             <div class="text-right">
@@ -48,7 +48,7 @@
                             <label class="control-label " for="nrepsw">Re Enter New Password</label>
                         </div>
                         <div class="col-md-6">
-                            <input type="password" th:field="*{newPasswordConform}" id="nrepsw" placeholder="Re Enter New Password Here"
+                            <input type="password" data-th-field="*{newPasswordConform}" id="nrepsw" placeholder="Re Enter New Password Here"
                                    class="form-control pwd" name="nrepsw" required/>
                             <span class="error" id="nrepswError" th:errors="*{newPasswordConform}"   data-th-if="${#fields.hasErrors('newPasswordConform')}">Error New Password</span>
                             <div class="text-right">
@@ -86,7 +86,7 @@
     <strong> <span id="messageNote"   data-th-text="${message}"></span></strong>
 </div>
 <!--footer include-->
-<footer   data-th-replace="~{fragments/footer :: footerFragment}"></footer>
+<div   data-th-replace="~{fragments/footer :: footerFragment}"></div>
 <!--script include-->
 <div data-th-replace="~{fragments/script :: scriptFragment}"></div>
 
