--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" >
 <body>
 
 
 <!-- Topbar -->
-<nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow" th:fragment="navBarFragment">
+<nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow" data-th-fragment="navBarFragment">
 
     <div class="col">
         <a class="navbar-brand" href="/home">
