--- a/src/main/resources/templates/user/addUserStudent.html
+++ b/src/main/resources/templates/user/addUserStudent.html
@@ -32,7 +32,7 @@
 <!--Employee find-->
 <div class="container-fluid bg-dark formBorder" id="employeeFindForm" data-th-if="${employeeDetailShow==false}" >
   <div class="col-sm-12 flex-column " >
-    <form id="form" method="POST" data-th-action="${'/user/workingPlace'}" data-th-object="${employee}"
+    <form id="form" method="POST" data-th-action="${'/user/student'}" data-th-object="${student}"
           enctype="multipart/form-data" >
       <div class="form-row" >
         <div class="col-5 flex-column" >
@@ -43,9 +43,9 @@
             <div class="col-8" >
               <select id="selectParameter" class="form-control" tabindex="1" required >
                 <option value="" >Please select</option >
-                <option value="nic" >NIC Number</option >
-                <option value="payRoleNumber" >Pay Role Number</option >
-                <option value="departmentIdNumber" >Department Id Number</option >
+                <option value="regNo" >Registration Number</option >
+                <option value="firstName" >First Name</option >
+                <option value="mobile" >Mobile</option >
               </select >
             </div >
           </div >
@@ -87,117 +87,17 @@
     <span aria-hidden="true" >&times;</span >
   </button >
   <strong ><span id="employeeNotFound" data-th-text="${employeeNotFound}" ></span ></strong >
-  <script >
-      $(".alert").alert();
-  </script >
-</div >
-
-<!--User add from-->
-<div class="container-fluid bg-dark formBorder" data-th-if="${employeeDetailShow==true}" id="userFormShow" >
-  <form id="formUser" data-th-action="${addStatus==true?'/user/add':'/user/update'}" data-th-object="${user}"
-        class="form-horizontal" method="POST" autocomplete="false" >
-    <div class="row" >
-      <!--Left Side-->
-      <div class="form-batch col-md-5 col-sm-7 text-left flex-column" >
-        <div id="idHide" data-th-if="${addStatus==false}" class="form-row" >
-          <div class="col-md-4" >
-            <label class="control-label" for="id" >ID :</label >
-          </div >
-          <div class="col-md-8" >
-            <input class="form-control" data-th-field="*{id}" id="id" type="text" readonly />
-          </div >
-        </div >
-        <!--Employee details Display-->
-        <div class="form-row" >
-          <div class="col-md-4" >
-            <label class="control-label" for="employee" >Employee :</label >
-          </div >
-          <div class="col-md-8" >
-            <select class="form-control" data-th-field="*{employee}" data-th-each="e : ${employee}" name="employee"
-                    id="employee" required >
-              <option id="employeeList"
-                      data-th-text="${e.title.title} + ${' '} + ${e.name} +${' - '} + ${e.nic}"
-                      data-th-value="${e.id}"
-                      data-th-field="*{employee}" value="" >Please select
-              </option >
-            </select >
-            <div id="employeeNameBox" data-th-if="${addStatus==false}" >
-              <strong >
-                                <span id="employeeName"
-                                      data-th-text="${user.employee.title.title} + ${' '} + ${user.employee.name} +${' - '} + ${user.employee.nic}" ></span >
-                <input type="hidden" id="employeeSelected" data-th-field="*{employee}" >
-              </strong >
-            </div >
-          </div >
-        </div >
-        <!--User name-->
-        <div class="form-row" >
-          <label class="control-label col-md-4" for="username" >User Name :</label >
-          <div class="col-md-8" >
-            <input class="form-control" data-th-field="*{username}" id="username"
-                   placeholder="Enter User Name Here" required type="text" />
-          </div >
-        </div >
-        <!--Password-->
-        <div class="form-row" >
-          <label class="control-label col-md-4" for="password" >Password :</label >
-          <div class="col-md-8" >
-            <input class="form-control pwd" id="password" data-th-field="*{password}"
-                   placeholder="Enter Password Here" required type="password" min="6"
-            />
-            <div class="text-right" >
-              <span id="result" ></span >
-            </div >
-          </div >
-        </div >
-
-        <div class="form-row" >
-          <div class="form-row alert alert-danger text-center" >
-            <strong >Attention !</strong >
-            If Employee is belong to supper senior category.
-            <strong >Please select one or two work station </strong >.
-          </div >
-        </div >
-      </div >
-      <!--Right Side-->
-      <div class="form-batch col-md-5 col-sm-7 text-left flex-column" >
-        <!--Roles Display-->
-        <div class="form-row" >
-          <label class="control-label" for="roles" >Roles :</label >
-          <select id="roles" data-th-field="*{roles}" class="form-control" size="16" multiple required >
-            <option id="roleList" data-th-each="role, rowCount : ${roleList}"
-                    data-th-text="${rowCount.count} +${'. '}+${role.roleName}"
-                    data-th-value="${role.id}"
-                    data-th-field="*{roles}" value="" ></option >
-          </select >
-        </div >
-      </div >
-
-      <!--Button-->
-      <div class="form-batch col-md-12 col-sm-12 text-center flex-column" >
-        <button class="btn btn-success" type="submit" >
-          <i class="fa fa-save" style="font-size: 20px" ></i >&nbsp; &nbsp;<span
-              id="submit" data-th-text="${addStatus==true?'Save': 'Update'}" >                        </span >
-        </button >
-      </div >
-    </div >
-    <!--Error-->
-    <div class="form-row" >
-      <label id="errorLabel" data-th-if="${#fields.hasErrors('*')}" data-th-text="'Errors: '" >Errors: </label >
-      <ul >
-        <li id="errorDisplay" class="error" data-th-each="err: ${#fields.errors('*')}" data-th-text="${err}" ></li >
-      </ul >
-    </div >
-  </form >
-
 
 </div >
+
 
 <!--footer include-->
 <div data-th-replace="~{fragments/footer :: footerFragment}" ></div >
 <!--script include-->
 <div data-th-replace="~{fragments/script :: scriptFragment}" ></div >
-
+<script >
+    $(".alert").alert();
+</script >
 
 </body >
 </html >
